--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 matplotlib==3.4.3
-numpy==1.23.0
+numpy==1.20.3
 pandas==1.3.4
 seaborn==0.11.2
+streamlit==1.10.0
 yfinance==0.1.72
 pyportfolioopt==1.5.3
