--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+cvxpy==1.2.1
 matplotlib==3.4.3
 numpy==1.23.0
 pandas==1.3.4
+plotly==5.6.0
 seaborn==0.11.2
 streamlit==1.10.0
 yfinance==0.1.72
 pyportfolioopt==1.5.3
+gi
